[project]
name = "sb3-soft"
version = "0.1.0"
description = "Soft Q-target reinforcement learning algorithms for Stable-Baselines3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["stable-baselines3>=2.5.0"]
license = { file = "LICENSE" }
authors = [{ name = "Mikihisa Yuasa" }]
keywords = ["reinforcement-learning", "stable-baselines3", "sac", "sql"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/miki-yuasa/sb3-soft"
Repository = "https://github.com/miki-yuasa/sb3-soft"
Issues = "https://github.com/miki-yuasa/sb3-soft/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sb3_soft"]
